client/assets/styles/scss/popover/popover-dns-mappings.scss
.popover-dns-mappings {
  max-width: none;
  width: 360px;

  .popover-view {
    min-height: 80px; // set initial height
  }

  .popover-content {
    max-height: calc(100vh - 176px);
  }

  .popover-list {
    margin: 0 12px;
    padding: 12px 0;
  }

  .popover-list-item {
    line-height: 1.4; // override
    margin: 0 -12px;
    min-height: 0; // override
    padding: 9px 18px;

    // section headings
    &.small.disabled {
      padding-bottom: 3px;
      padding-top: 6px;
    }

    &:active .small {
      color: inherit;
    }

    .iconnables {
      margin: 0; // override .list-item .iconnables
    }
  }

  .icons-status {
    flex: 0 0 auto;
    margin-right: 6px;
  }

  // isolation badges
  .btn-badge {
    margin-left: 15px;
  }

  // check icon
  .icons-check {
    padding: 6px;

    + .icons-arrow-forward {
      opacity: 0;

      &.in {
        opacity: 1;
        transition: opacity .15s 1.75s ease-in;
      }
    }
  }

  // check icon path
  .path {
    animation: check 1.5s .3s ease-out forwards;
    stroke-dasharray: 18;
    stroke-dashoffset: 18;
    transform-origin: 50% 50%;
  }

  .icons-arrow-forward {
    color: $gray-light;
  }

  .popover-footer.empty {
    border: 0;
  }
}

.dns-arrow {
  color: $gray-light;
  font-size: 18px;
  margin: 0 12px;
}

.list-repository-containers .iconnables {
  position: absolute;
  right: 9px;
  top: 15px;
}

